Add temp files (#7)
* java oop

* navbar and sidebar

* refs

* oop and ood

* oop ood solid

* jvm

* JMM

* GC

* uils

* top nav

* cleanup

* cleanup

* cleanup

* cleanup

* jvm

* gc monitor

* jvm

* java

* core java

* data types

* yt